Edit styles in style.css and index.html such as capitalized color codes and missing two line breaks between css rules.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Project 1 Portfolio Joy Thomas</title>
-        <link href='http://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
+        <link href="http://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <script src="js/jquery-1.11.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
@@ -85,15 +85,15 @@
             </main>    
         </div>
         <!-- Modal -->
-        <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel">Project 1</h4>
+                        <h4 class="modal-title" id="myModalLabel1">Project 1</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="images/project1photo.jpg">
-                             My first project will be described here.
+                        <img class="img-responsive" src="images/project1photo.jpg" alt="Project 1 Photo">
+                        <p>My first project will be described here.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -101,15 +101,15 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel">Project 2</h4>
+                        <h4 class="modal-title" id="myModalLabel2">Project 2</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="images/project2photo.jpg">
-                             My second project will be described here.
+                        <img class="img-responsive" src="images/project2photo.jpg" alt="Project 2 Photo">
+                        <p>My second project will be described here.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -117,15 +117,15 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel">Project 3</h4>
+                        <h4 class="modal-title" id="myModalLabel3">Project 3</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="images/project3photo.jpg">
-                             My third project will be described here.
+                        <img class="img-responsive" src="images/project3photo.jpg" alt="Project 3 Photo">
+                        <p>My third project will be described here.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
