Add new project images, update project descriptions, and modify font sizes on css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Project 1 Portfolio Joy Thomas</title>
+        <meta name="description" content="The portfolio of Joy Thomas, a front end web developer">
+        <meta name="author" content="Joy Thomas">
+        <link rel="icon" href="images/favicon.ico">
+        <title>Joy Thomas | Front End Web Developer</title>
         <link href="http://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <script src="js/jquery-1.11.3.min.js"></script>
@@ -41,9 +44,9 @@
                     <div class="col-md-12">
                         <ul id="drawer" class="nav-list">
                             <li class="nav_item"><a href="index.html">Home</a></li>
-                            <li class="nav_item"><a href="#">About Me</a></li>
-                            <li class="nav_item"><a href="#">Resume</a></li>
-                            <li class="nav_item"><a href="#"> Contact</a></li>
+                            <li class="nav_item"><a href="https://www.linkedin.com/in/joythomas7">LinkedIn</a></li>
+                            <li class="nav_item"><a href="https://github.com/joylol">Github</a></li>
+                            <li class="nav_item"><a href="JoyThomasResume.pdf">Resume</a></li>
                         </ul>
                     </div>
                 </div>    
@@ -66,19 +69,19 @@
                     </div>
                     <div class="row text-center">
                         <div class="col-md-4">
-                            <img class="img-responsive" src="images/project1photo.jpg" alt="Project 1 Image" data-toggle="modal" data-target="#project1">
-                            <h3 class="text-uppercase project-super">Project 1</h3>
-                            <p><a href="http://github.com/joylol">Link to project 1</a></p>
+                            <img class="img-responsive" src="images/frogger370x250.png" alt="Arcade Game Frogger Project Image" data-toggle="modal" data-target="#project1">
+                            <h3 class="project-super">Frogger Clone</h3>
+                            <p><a href="http://joylol.github.io/FE-P3-Arcadegame-JT/" class="project-link">See it</a></p>
                         </div>
                         <div class="col-md-4">
-                            <img class="img-responsive" src="images/project2photo.jpg" alt="Project 2 Image" data-toggle="modal" data-target="#project2">
-                            <h3 class="text-uppercase project-super">Project 2</h3>
-                            <p><a href="http://github.com/joylol">Link to project 2</a></p>
+                            <img class="img-responsive" src="images/map370x250.png" alt="Neighborhood Map Project Image" data-toggle="modal" data-target="#project2">
+                            <h3 class="project-super">Neighborhood Map</h3>
+                            <p><a href="http://joylol.github.io/FE-P5a-Neighborhoodmap-JT/" class="project-link">See it</a></p>
                         </div>
                         <div class="col-md-4">
-                            <img class="img-responsive" src="images/project3photo.jpg" alt="Project 3 Image" data-toggle="modal" data-target="#project3">
-                            <h3 class="text-uppercase project-super">Project 3</h3>
-                            <p><a href="http://github.com/joylol">Link to project 3</a></p>
+                            <img class="img-responsive" src="images/jasmine370x250.png" alt="Jasmine Testing Project Image" data-toggle="modal" data-target="#project3">
+                            <h3 class="project-super">Feed Reader Testing</h3>
+                            <p><a href="http://joylol.github.io/FE-P6-FeedReaderTesting-JT/" class="project-link">See it</a></p>
                         </div>
                     </div>
                 </section>
@@ -92,8 +95,8 @@
                         <h4 class="modal-title" id="myModalLabel1">Project 1</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="images/project1photo.jpg" alt="Project 1 Photo">
-                        <p>My first project will be described here.</p>
+                        <img class="img-responsive" src="images/frogger370x250.png" alt="Frogger Clone Project Image">
+                        <p>In this project, I displayed a clone of the classic game, Frogger, using HTML5. Then, I coded player, enemies, and other game entities in JavaScript's object-oriented pseudo-classical style</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -108,8 +111,8 @@
                         <h4 class="modal-title" id="myModalLabel2">Project 2</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="images/project2photo.jpg" alt="Project 2 Photo">
-                        <p>My second project will be described here.</p>
+                        <img class="img-responsive" src="images/map370x250.png" alt="Neighborhood Map Project Image">
+                        <p>For this project, I built a single-page, responsive application with Knockout.js framework and hosted on GitHub Pages. Using Google Maps API, I added a full-page map that highlights 10 top locations to visit in Dallas, TX. The application can filter locations via list or search bar. I also employed AJAX to Wiki API to allow the user view more information about each location</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -124,8 +127,8 @@
                         <h4 class="modal-title" id="myModalLabel3">Project 3</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="images/project3photo.jpg" alt="Project 3 Photo">
-                        <p>My third project will be described here.</p>
+                        <img class="img-responsive" src="images/jasmine370x250.png" alt="Jasmine Testing Project Image">
+                        <p>For this project, I used Jasmine to test the functionality of the provided Google feed reader. Testing ensures the website functions as expected.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
